Fix missing scrollbar in LDV fullscreen dialogs

--- a/src/ludivine/assets/client.css
+++ b/src/ludivine/assets/client.css
@@ -29,6 +29,7 @@ html {
     flex: 1;
     flex-direction: column;
     background: inherit;
+    overflow-y: scroll;
 }
 main {
     display: flex;
